# filmpro

docs/proposals/: design-identity.md  industry-stakeholders.md  market-research.md  product-roadmap.md  proposed-features.md  technical-proposal.md  ue-ux.md
filmpro-service/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
filmpro-service/app/: database.py  main.py  service_launcher.py
filmpro-service/app/api/: deps.py
filmpro-service/app/api/endpoints/: auth.py  breakdowns.py  scripts.py
filmpro-service/app/core/: config.py  logging.py  security.py
filmpro-service/app/models/: script.py
filmpro-service/app/schemas/: script.py
filmpro-service/app/services/script_analysis/: character_analyzer.py  element_extractor.py  scene_analyzer.py
filmpro-service/app/services/script_parser/: base.py  fountain.py
